@@ -16,6 +16,8 @@
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
 *)
 
+(* Putils - parser helper functions *)
+
 open String
 open Mutils
 
